2025-04-19  Bruno Haible  <bruno@clisp.org>

	tests: Add unit test with many keywords.
	* tests/generate-5000.sh: New file.
	* tests/5000.gperf: New generated file.
	* tests/5000.exp: New generated file.
	* tests/Makefile.in (SOURCE_FILES): Add them.
	(check-large): New rule.

2025-04-19  Bruno Haible  <bruno@clisp.org>

	build: Update dependencies after 2025-04-16 change.
	* src/Makefile.in (*.$(OBJEXT)): Depend on $(CONFIG_H).

2025-04-17  Bruno Haible  <bruno@clisp.org>

	Improve comments.
	* src/search.cc: Fix comments.

2025-04-16  Bruno Haible  <bruno@clisp.org>

	build: Update after gnulib changed.
	* gnulib-local/lib/getopt-pfx-ext.h.diff: Remove file.
	* Makefile.in (SOURCE_FILES): Remove it.

	build: Use more gnulib modules.
	* autogen.sh (GNULIB_MODULES): Add getopt-gnu.
	Use directory gnulib-local.
	* gnulib-local/lib/getopt-pfx-ext.h.diff: New file.
	* Makefile.in (SOURCE_FILES): Add it.
	(distdir): Use 'mkdir -p' instead of 'mkdir'.
	* lib/getopt.h: Remove file.
	* lib/getopt.c: Remove file.
	* lib/getopt1.c: Remove file.
	* lib/Makefile.am (libgp_a_SOURCES): Remove them.

2025-04-16  Bruno Haible  <bruno@clisp.org>

	build: Use more gnulib modules.
	* autogen.sh (GNULIB_MODULES): Add read-file.
	Copy also config.guess and config.sub.
	* lib/Makefile.am (BUILT_SOURCES, MOSTLYCLEANDIRS): New variables.
	(libgp_a_SOURCES): Remove getline.h, getline.cc.
	* lib/getline.h: Remove file.
	* lib/getline.cc: Remove file.
	* src/configure.ac: Change config.h to also include ../lib/config.h.
	* src/output.cc: Include <config.h> first.
	* src/search.cc: Likewise.
	* src/bool-array.cc: Include <config.h>.
	* src/keyword.cc: Likewise.
	* src/keyword-list.cc: Likewise.
	* src/hash-table.cc: Likewise.
	* src/main.cc: Likewise.
	* src/options.cc: Likewise.
	* src/positions.cc: Likewise.
	* src/version.cc: Likewise.
	* src/input.cc: Likewise. Include read-file.h instead of getline.h.
	(Input<KT>::read_input): Use fread_file instead of get_delim.
